# jif-tube-app

./: .gitignore  README.md  main.py  pyproject.toml
api/: s.py
database/: db.py  schema.sql
frontend/: main_view.py
model/: main.py
