[project]
name = "jif-tube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.27.6",
    "flet-desktop>=0.27.6",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "polars>=1.25.2",
]
