[project]
name = "jif-tube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.27.6",
    "flet-desktop>=0.27.6",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0", #sacar
    "torchaudio>=2.6.0", #sacar
    "polars>=1.25.2",
    "google-api-python-client>=2.164.0",
    "faker>=37.0.0", #sacar
    "rich>=13.9.4", #sacar
    "websockets>=15.0.1",
    "uvicorn>=0.34.0",
]
